
<resources>
    <string name="app_name">Meal Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeDescription">You are currently in no group. Either you can create one now or request to join one.</string>
    <string name="search_group">Search Group</string>
    <string name="create_a_group">Create a group</string>
    <string name="log_out">Log Out</string>
    <string name="address">Address</string>
    <string name="cooks_name">Cooks name</string>
    <string name="dinner">Dinner</string>
    <string name="launch">Launch</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="create_an_account">Create an account</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="daily_meal_input_end_time">Daily meal input end time</string>
    <string name="electricity_gas_and_water">Electricity, Gas and Water</string>
    <string name="others">Others</string>
    <string name="meal_advance">Meal Advance</string>
    <string name="house_rent">House Rent</string>
    <string name="payables">Payables</string>
</resources>
