<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50D890"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".features.view.fragments.SignUpFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backBt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="103dp"
                android:layout_height="71dp"
                android:layout_marginTop="96dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/payables"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.15" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.26">

                <LinearLayout
                    android:id="@+id/electricityLay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border"
                    android:visibility="visible">


                    <EditText
                        android:id="@+id/electricityEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/electricity_gas_and_water"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/othersLay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border"
                    android:visibility="visible">


                    <EditText
                        android:id="@+id/othersEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/others"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/mealAdvanceLay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border"
                    android:visibility="visible">


                    <EditText
                        android:id="@+id/mealAdvanceEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/meal_advance"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/houseRentLay"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border"
                    android:visibility="visible">


                    <EditText
                        android:id="@+id/houseRentEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/house_rent"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:inputType="number"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="20dp"
                android:text="Members have to response in these time to not miss any."
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/nextImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/next"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.31" />

        <ImageView
            android:id="@+id/stepIm"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat"
            android:src="@drawable/indicator_four"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nextImage"
            app:layout_constraintStart_toStartOf="@+id/nextImage"
            app:layout_constraintTop_toBottomOf="@+id/nextImage"
            app:layout_constraintVertical_bias="0.0" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

