<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50D890"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".features.view.fragments.SignUpFragment"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="103dp"
                android:layout_height="71dp"
                android:layout_marginTop="96dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Group details"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.100000024" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:id="@+id/fullNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border">


                    <EditText
                        android:id="@+id/groupNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="Group name"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border">


                    <EditText
                        android:id="@+id/addressEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/address"
                        android:maxLength="15"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cooksNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border">


                    <EditText
                        android:id="@+id/cooksNameEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/cooks_name"
                        android:maxLength="15"
                        android:paddingStart="15dp"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:textColorHint="#50D890" />

                </LinearLayout>

                <!--<LinearLayout
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:background="@drawable/border">
                </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/mealTypeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="45dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/border">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/mealTypeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/montserrat"
                            android:text="Meal type"
                            android:textColor="#50D890"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center|left"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/mealTypeTxt">

                            <CheckBox
                                android:id="@+id/breakfastCb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/breakfast"
                                android:textColor="#50D890" />

                            <CheckBox
                                android:id="@+id/launchCb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/launch"
                                android:textColor="#50D890" />

                            <CheckBox
                                android:id="@+id/dinnerCb"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/dinner"
                                android:textColor="#50D890" />
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/nextImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/next"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/haveAccountTv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:src="@drawable/step_1"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>